--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.main.allow-bean-definition-overriding=true
 
 server.port=8080
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5433/Lab
 spring.datasource.username=postgres
